Fixing spacing and scrolling on the datasetall page

--- a/preflibApp/static/css/style.css
+++ b/preflibApp/static/css/style.css
@@ -814,7 +814,16 @@ All datasets page
 ul#dataset-list {
 	list-style-type: none;
 	padding: 0;
-	margin: 0;
+	margin-left: 30px;
+	margin-right: 0;
+	margin-bottom: 0;
+	margin-top: 0;
+}
+
+@media screen and (max-width: 1100px) {
+	ul#dataset-list {
+		margin-left: 0;
+	}
 }
 
 ul#dataset-list li {
